--- a/style.css
+++ b/style.css
@@ -1,18 +1,12 @@
 * {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Crimson Text", sans-serif;
     box-sizing: border-box;
 
     --left-col-width: 400px;
-    --article-max-width: 300px; 
-    --mobile-width: 500px;
-    --header-height: 100px;
+    --article-width: 325px; 
+    --header-height: 110px;
 }
 
-@media screen and (max-width: 700px) {
-    * {
-        --header-height: 150px;
-    }
-}
 
 
 header {
@@ -61,7 +55,7 @@ nav {
  
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 735px) {
     nav {
         display: block;
         position: relative;
@@ -93,20 +87,16 @@ main {
 
 section {
 
-    border: solid 1px black;
-    
+    border: solid 1px black;    
+}
+
+article.intro {
+    width: 100%;
 }
 
 article { 
-    max-width: var(--article-max-width);
-    margin: 10px 10px;
     border: dotted 1px black;
-    
-}
-
-.intro {
-    max-width: var(--left-col-width);
-
+    width: var(--article-width);
 }
 
 article img {
@@ -127,10 +117,19 @@ article img {
     margin-left: var(--left-col-width); 
 }
 
+@media screen and (max-width: 735px) {
+    .left, .right {
+      width: 100%; 
+      position: relative;    
+    }
+
+    article {
+        width: 100%; 
+      }
+  }
+
 .event {
-    /* float: left; */
     position: relative;
-    width: auto;
 }
  
 .event .content {
@@ -166,26 +165,37 @@ article img {
     opacity: 1;
 }
 
-@media screen and (max-width: 700px) {
-    .left, .right {
-      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */  
-      
-      position: relative;    
-    }
+.google-maps {
+    position: relative;
+    padding-bottom: 75%;
+    height: 0;
+    overflow: hidden;
+}
+.google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+}
+
+
+  /* fonts */
+  /* latin */
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Crimson Text Regular'), local('CrimsonText-Regular'), url(https://fonts.gstatic.com/s/crimsontext/v10/wlp2gwHKFkZgtmSR3NB0oRJfbwhT.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
-
-  @media screen and (max-width: 700px) {
-    article {
-      max-width: 100%;
-      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */      
-    }
-
-
-  }
-  @media screen and (max-width: 700px) {
-    .intro {
-        max-width: 100%;
-    }
-
-
+  /* latin */
+  @font-face {
+    font-family: 'Crimson Text';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: local('Crimson Text Bold'), local('CrimsonText-Bold'), url(https://fonts.gstatic.com/s/crimsontext/v10/wlppgwHKFkZgtmSR3NB0oRJX1C1GDNNQ.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
