--- a/fred-and-carol/styles/main.css
+++ b/fred-and-carol/styles/main.css
@@ -46,7 +46,7 @@ main {
     margin-top: 100px;
 }
 
-@media screen and (max-width: 735px)
+@media screen and (max-width: 650px)
 {
     header{
         height: auto;
@@ -75,6 +75,11 @@ main {
     }
 }
 
+article img {
+    width: 100%;
+    position: relative;
+}
+
 p {
     margin-block-end: 10px;
 }
@@ -83,11 +88,12 @@ h1, h2 {
     margin-block-end: 10px;
 }
 
-.banner{
+/* */
+
+.banner {
     width: 100%;
     position: relative;
     border: solid 1px;
-    padding: 10px;
     color: white;
 }
 
@@ -97,9 +103,6 @@ h1, h2 {
     bottom: 0;
     left: 0;
 }
-
-
-
 
 .banner .heading {
     font-size: 60px;
@@ -115,13 +118,63 @@ h1, h2 {
     max-height: 400px;
 }
 
-@media screen and (max-width: 735px)
+@media screen and (max-width: 650px)
 {
     .banner .heading {
         font-size: 30px;
     }
+
 }
 
+@media screen and (min-width: 1000px)
+{
+    .banner {
+        width: 60%;
+        display: inline-block;
+    }
+}
+
+/* */
+
+.intro {
+    width: 100%;
+    border: solid 1px;
+    padding: 10px;
+    display: flex;
+}
+
+.intro .text {
+    padding: 10px;
+    text-align: right;
+}
+
+.intro .image {
+    max-width: 300px;
+    align-content: stretch;
+}
+
+@media screen and (min-width: 1000px)
+{
+    .intro {
+        width:39%;
+        display: inline-block;
+        height: 400px;
+        vertical-align: top;
+    }
+
+    .intro .image {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 650px)
+{
+    .intro .image {
+        display: none;
+    }
+}
+
+/* */
 
 .half-section {
     width: 100%;
@@ -157,7 +210,7 @@ h1, h2 {
     align-content: stretch;
 }
 
-@media screen and (max-width: 735px)
+@media screen and (max-width: 650px)
 {
     .half-section {
         display: block;
@@ -174,9 +227,6 @@ h1, h2 {
     }
 }
 
+/* */
 
-article img {
-    width: 100%;
-    position: relative;
-}
 
