--- a/fred-and-carol/styles/main.css
+++ b/fred-and-carol/styles/main.css
@@ -95,6 +95,9 @@ h1, h2 {
     position: relative;
     border: solid 1px;
     color: white;
+    height: 400px;
+    background-size: cover;
+    background-position: center;
 }
 
 .banner .text {
@@ -113,9 +116,12 @@ h1, h2 {
     left: 0;
 }
 
-.banner .image {
-    width: 100%;
-    max-height: 400px;
+.banner .heading.dark {
+    color: rgb(99, 66, 129);
+}
+
+.banner .heading.top {
+    bottom: unset;
 }
 
 @media screen and (max-width: 650px)
@@ -132,6 +138,26 @@ h1, h2 {
         width: 60%;
         display: inline-block;
     }
+}
+
+/* */
+.full-banner {
+    width: 100%;
+    position: relative;
+    border: solid 1px;
+    color: white;
+    height: 450px;
+    background-size: cover;
+    background-position: center;
+}
+
+.full-banner .heading {
+    font-size: 60px;
+    font-weight: bold;
+    margin: 30px 10px 10px 30px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 /* */
@@ -181,6 +207,7 @@ h1, h2 {
     border: solid 1px;
     padding: 10px;
     display: flex;
+    margin: 10px;
 }
 
 .half-section .text {
@@ -192,6 +219,8 @@ h1, h2 {
     text-align: right;
     
 }
+
+
 
 .half-section .text a {
     background-color: crimson;
@@ -228,5 +257,20 @@ h1, h2 {
 }
 
 /* */
+
+aside {
+    padding: 15px 15px 15px 15px;
+    background-color: rgb(131, 168, 231);
+    color: aliceblue;
+    text-align: center;
+    margin: auto 15px;
+}
+
+/* */
+
+footer p {
+    line-height: 75px;
+    text-align: center;
+}
 
 
